--- a/src/css/root.css
+++ b/src/css/root.css
@@ -10,6 +10,7 @@
   --color-beige: #fdebae;
   --color-dorado: #bc945a;
   --color-titulos: #404041;
+  --color-gris-boton: #6F7271;
   --color-gris-texto: #555555c9;
   --color-gris-opaco: #b4b4b48a;
   --color-gris-bordes: #cccccc;
